fix: Resolve IDE diagnostics in HttpSecurityValidatorTest
- Removed unused import java.util.stream.Collectors
- Replaced lambdas with method references where appropriate
- Added null safety check in badWordRejecter to prevent NPE
- Added @SuppressWarnings annotations for false positive NPE warnings
  in test methods that only use controlled non-null inputs
- All tests pass with pre-commit checks

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>